syntax = "proto3";

import "google/protobuf/empty.proto";
import "message/Player.proto";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.world";
option java_outer_classname = "WorldPlayersAccessorProto";

service WorldPlayersAccessorService {
  rpc GetNearPlayers (google.protobuf.Empty) returns (stream PlayerRpcDto) {
  }
}
