syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.peytob.rpg.rpc.interfaces.base.model";
option java_outer_classname = "Vec2Proto";

message Vec2Dto {
  float x = 1;
  float y = 2;
}
